# CXXPythonDocs

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  api.html  genindex.html  index.html  objects.inv  operations.html  search.html  searchindex.js  vec3f.html
.doctrees/: api.doctree  environment.pickle  index.doctree  operations.doctree  vec3f.doctree
.github/workflows/: build.yml  publishDocs.yml
_sources/: api.rst.txt  index.rst.txt  operations.rst.txt  vec3f.rst.txt
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt
docs/sphinx/: CMakeLists.txt  api.rst  conf.py.in  index.rst
src/: CMakeLists.txt
src/cxxpythondocs/: CMakeLists.txt  bindOperations.cpp  bindVec3f.cpp  module.cpp  operations.cpp  operations.h  vec3f.cpp  vec3f.h
src/mathTools/: CMakeLists.txt  operations.cpp  operations.h  vec3f.cpp  vec3f.h
